# python-demo

./: README.md  demo.py  pyproject.toml
app/: demo.py
