[tool.poetry]
name = "pythondemo"
version = "0.1.0"
description = "A simple Python demo package"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.repositories]
github = { url = "https://nuget.pkg.github.com/YOUR_GITHUB_USERNAME/index.json" }

[tool.poetry.publish]
repository = "github"