[tool.poetry]
name = "python-demo"
version = "0.1.0"
description = "A simple Python demo package"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]


[[tool.poetry.packages]]
include = "app/"

[[tool.poetry.source]]
name = "github"
url = "https://pypi.pkg.github.com/mrlonely1986"
priority = "primary"